public/assets/css/main.css
@import url(//fonts.googleapis.com/earlyaccess/notosanstc.css);
h1 {
  font-size: 30px; }

h2 {
  font-size: 22px; }

h3 {
  font-size: 17px; }

span {
  font-size: 13px; }

p {
  font-size: 14px; }

html, body {
  font-size: 15px;
  width: 100%;
  height: 100%;
  padding: 0;
  margin: 0; }

* {
  margin: 0;
  padding: 0;
  font: inherit;
  vertical-align: baseline;
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
  font-family: 'Noto Sans TC', sans-serif;
  -webkit-font-smoothing: antialiased; }

article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
  display: block; }

ol, ul {
  list-style: none; }

input, textarea, button, select, option, optgroup, fieldset, label {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: none;
  border: 0; }

a {
  display: inline-block;
  text-decoration: none;
  color: currentColor; }

[class*='flex'] {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap; }
  [class*='flex'] > * {
    -webkit-box-flex: 0;
    -ms-flex: 0 0 auto;
    flex: 0 0 auto;
    margin: 10px; }

[class*='flex'][class*='-jc-'] {
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  justify-content: center; }

[class*='flex'][class*='-jfs-'] {
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  justify-content: flex-start; }

[class*='flex'][class*='-jfe-'] {
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  justify-content: flex-end; }

[class*='flex'][class*='-jsa-'] {
  -ms-flex-pack: distribute;
  justify-content: space-around; }

[class*='flex'][class*='-jsb-'] {
  -webkit-box-pack: justify;
  -ms-flex-pack: justify;
  justify-content: space-between; }

[class*='flex'][class*='-ac-'] {
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center; }

[class*='flex'][class*='-as-'] {
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch; }

[class*='flex'][class*='-afs-'] {
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: flex-start; }

[class*='flex'][class*='-afe-'] {
  -webkit-box-align: end;
  -ms-flex-align: end;
  align-items: flex-end; }

[class*='flex'][class*='-nw-'] {
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap; }

[class*='-f10-'] > * {
  -webkit-box-flex: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -ms-flex-negative: 0;
  flex-shrink: 0; }

[class*='-f01-'] > * {
  -webkit-box-flex: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -ms-flex-negative: 1;
  flex-shrink: 1; }

[class*='-f11-'] > * {
  -webkit-box-flex: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1; }

[class*='-fw100px-'] > * {
  width: 100px;
  -ms-flex-preferred-size: 100px;
  flex-basis: 100px; }

[class*='-fw200px-'] > * {
  width: 200px;
  -ms-flex-preferred-size: 200px;
  flex-basis: 200px; }

[class*='-fw300px-'] > * {
  width: 300px;
  -ms-flex-preferred-size: 300px;
  flex-basis: 300px; }

[class*='-fw400px-'] > * {
  width: 400px;
  -ms-flex-preferred-size: 400px;
  flex-basis: 400px; }

[class*='-fw500px-'] > * {
  width: 500px;
  -ms-flex-preferred-size: 500px;
  flex-basis: 500px; }

[class*='flex'][class*='-l1-'] > * {
  width: calc( 100% - 20px);
  -ms-flex-preferred-size: calc( 100% - 20px);
  flex-basis: calc( 100% - 20px); }

[class*='flex'][class*='-l2-'] > * {
  width: calc( 50% - 20px);
  -ms-flex-preferred-size: calc( 50% - 20px);
  flex-basis: calc( 50% - 20px); }

[class*='flex'][class*='-l3-'] > * {
  width: calc( 33.33% - 20px);
  -ms-flex-preferred-size: calc( 33.33% - 20px);
  flex-basis: calc( 33.33% - 20px); }

[class*='flex'][class*='-l4-'] > * {
  width: calc( 25% - 20px);
  -ms-flex-preferred-size: calc( 25% - 20px);
  flex-basis: calc( 25% - 20px); }

[class*='flex'][class*='-l5-'] > * {
  width: calc( 20% - 20px);
  -ms-flex-preferred-size: calc( 20% - 20px);
  flex-basis: calc( 20% - 20px); }

[class*='flex'][class*='-l6-'] > * {
  width: calc( 16.66% - 20px);
  -ms-flex-preferred-size: calc( 16.66% - 20px);
  flex-basis: calc( 16.66% - 20px); }

@media screen and (max-width: 992px) {
  [class*='flex'][class*='-m1-'] > * {
    width: calc( 100% - 20px);
    -ms-flex-preferred-size: calc( 100% - 20px);
    flex-basis: calc( 100% - 20px); }
  [class*='flex'][class*='-m2-'] > * {
    width: calc( 50% - 20px);
    -ms-flex-preferred-size: calc( 50% - 20px);
    flex-basis: calc( 50% - 20px); }
  [class*='flex'][class*='-m3-'] > * {
    width: calc( 33.33% - 20px);
    -ms-flex-preferred-size: calc( 33.33% - 20px);
    flex-basis: calc( 33.33% - 20px); }
  [class*='flex'][class*='-m4-'] > * {
    width: calc( 25% - 20px);
    -ms-flex-preferred-size: calc( 25% - 20px);
    flex-basis: calc( 25% - 20px); } }

@media screen and (max-width: 768px) {
  [class*='flex'][class*='-s1-'] > * {
    width: calc( 100% - 20px);
    -ms-flex-preferred-size: calc( 100% - 20px);
    flex-basis: calc( 100% - 20px); }
  [class*='flex'][class*='-s2-'] > * {
    width: calc( 50% - 20px);
    -ms-flex-preferred-size: calc( 50% - 20px);
    flex-basis: calc( 50% - 20px); }
  [class*='flex'][class*='-s3-'] > * {
    width: calc( 33.33% - 20px);
    -ms-flex-preferred-size: calc( 33.33% - 20px);
    flex-basis: calc( 33.33% - 20px); } }

@media screen and (max-width: 320px) {
  [class*='flex'][class*='-xs1-'] > * {
    width: calc( 100% - 20px);
    -ms-flex-preferred-size: calc( 100% - 20px);
    flex-basis: calc( 100% - 20px); }
  [class*='flex'][class*='-xs2-'] > * {
    width: calc( 50% - 20px);
    -ms-flex-preferred-size: calc( 50% - 20px);
    flex-basis: calc( 50% - 20px); } }

[class*='btn'] {
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  text-align: center; }
/* ... */

